CSS: Fix extending sidebar issue, stop task list from covering sidebar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,3 +104,7 @@ input[type="submit"] {
   justify-content: center;
   align-items: center;
 }
+
+.app {
+  display: block;
+}
