--- a/app/assets/stylesheets/main-content.css
+++ b/app/assets/stylesheets/main-content.css
@@ -1,5 +1,4 @@
 .main-content {
-  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
