--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -2,8 +2,8 @@
   background-color: #2e3c54;
   height: 100%;
   min-width: 242px;
-  display: flex;
-  flex-direction: column;
+  max-width: 242px;
+  float: left;
   -webkit-transition: width 10s, height 10s, -webkit-transform 10s;
    transition: width 10s, height 10s, transform 10s;
    overflow: hidden;
