--- a/app/assets/stylesheets/task-detail.css
+++ b/app/assets/stylesheets/task-detail.css
@@ -5,7 +5,7 @@
   border-color: #EFF0F1;
   background-color: white;
   height: 96%;
-  width: 50%;
+  width: 45%;
   margin-right: 25px;
   margin-left: 1.5%;
   margin-top: 2%;
