--- a/app/assets/stylesheets/tasks.css
+++ b/app/assets/stylesheets/tasks.css
@@ -11,8 +11,8 @@
 
 .task-list {
   height: 96%;
-  width: 65%;
-  min-width: 600px;
+  width: 55%;
+  min-width: 300px;
   border-top: 1px solid;
   border-right: 1px solid;
   border-left: 1px solid;
